--- a/src/pages/app/action.css
+++ b/src/pages/app/action.css
@@ -2,11 +2,14 @@
   width: 56rem;
   margin: 0 auto;
   background-color: rgba(0, 0, 0, 0);
+  position: relative;
 }
 .tabs {
   background-color: rgba(0, 0, 0, 0);
   display: flex;
   justify-content: left;
+  position: absolute;
+  top: -4.8rem;
 }
 .tab-title {
   height: 4.8rem;
@@ -15,14 +18,8 @@
   text-align: center;
   color: white;
   cursor: pointer;
-} 
+}
 
-.request-tab-title {
-  background-color: #F7931A;
-} 
-.verify-tab-title {
-  background-color: #535353;
-} 
 .action-container {
   padding: 2.4rem;
   background-color: white;
