--- a/src/pages/app/action.css
+++ b/src/pages/app/action.css
@@ -12,14 +12,24 @@
   top: -4.8rem;
 }
 .tab-title {
+  width: 19.6rem;
   height: 4.8rem;
-  width: 20rem;
+  position: relative;
+}
+
+.tab-text {
+  width: 19.6rem;
+  height: 4.8rem;
   line-height: 4.8rem;
   text-align: center;
   color: white;
   cursor: pointer;
+  z-index: 1;
+  position: absolute;
 }
-
+.tab-verify {
+  left: -0.7rem;
+}
 .action-container {
   padding: 2.4rem;
   background-color: white;
